<resources>
    <string name="app_name">Agenda Online</string>

    <!--Main Activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreET">Nombres</string>
    <string name="CorreoET">Correo electrónico</string>
    <string name="ContrasenaET">Contraseña</string>
    <string name="ConfirmarContrasenaET">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoUnaCuentaTXT">Tengo una cuenta</string>

    <!--Menu Principal-->
    <string name="CerrarSesion">Salir</string>

    <!--Activdad Login-->

    <string name="IniciarSesionTXT">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLoling">Contraseña</string>
    <string name="Btn_logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tiene cuenta?. Registrate</string>
    <string name="Bienvenido_Principal">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_usuario">Correo usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Estado">No Finalizado</string>





    <!--Menu Principal-->
    
</resources>