<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CrearCuentaTXT"
            android:fontFamily="@font/opensans"
            android:textSize="25sp"
            android:gravity="center" />

        <!-- Animación Lottie -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="Registro.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <!-- Campo Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_nombres"
                android:drawablePadding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CorreoET"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ContrasenaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContrasenaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Confirmar Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmarContrasenaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmarContrasenaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="18dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Registrar -->
        <Button
            android:id="@+id/RegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/RegistrarUsuario"
            android:fontFamily="@font/opensans"
            android:textSize="18sp" />

        <!-- Texto Tengo una cuenta -->
        <TextView
            android:id="@+id/TengoUnaCuentaTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/TengoUnaCuentaTXT"
            android:fontFamily="@font/opensans"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
