<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                
                <TextView
                    android:text="@string/Bienvenido_Principal"
                    android:textColor="#fff"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/progressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/NombresPrincipal"
                    android:text="@string/NombresPrincipal"
                    android:visibility="gone"
                    android:textColor="#fff"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:text="@string/CorreoPrincipal"
                    android:visibility="gone"
                    android:textColor="#fff"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>